# UnicornSC

./: .cproject  .project  CMakeLists.txt  README.md
cmake/: ImportSCC.cmake  ImportUnicorn.cmake
example/: CMakeLists.txt  sc_main.cpp  testbench.cpp  testbench.h  uart.cpp  uart.h  uart_regs.h
example/fw/: .gitignore  CMakeLists.txt
example/fw/bsp/env/: common-clang.mk  common-gcc.mk  entry.S
example/fw/bsp/env/iss/: init.c  link.lds  platform.h
example/fw/bsp/include/rtl/: const.h
example/fw/bsp/libwrap/: libwrap.mk
example/fw/hello-world/: .gitignore  Makefile  hello.c
src/: unicorn_sc.cpp  unicorn_sc.h
